--- a/style.css
+++ b/style.css
@@ -1,18 +1,27 @@
 html, body {
 	height: 100%;
-	font-size: 100px;
+	/*font-size: 100px;*/
+	color: #C5C6C7;
 }
 body {
 	text-align: center;
     font-size: 75%;
     font-family: 'Helvetica', 'Arial', sans-serif;
-    /*background-color: #c47e5b;*/
+}
+.problem-container {
+	height: 100%;
+}
+#problem {
+	height: 20%;
+}
+#product {
+	height: 15%;
+	color: #66FCF1;
 }
 .multiplication-problem {
-	height: 25%;
-    max-width: 120px;
-    margin: auto;
-    text-align: center;
+	width: 100%;
+	text-align: center;
+	height: 15%;
 }
 
 /* DivTable.com */
@@ -22,19 +31,31 @@ body {
 }
 .divTableRow {
 	display: table-row;
+	height: 15%;
 }
 .divTableCell {
 	border: 1px solid white;
 	display: table-cell;
 	padding: 3px 10px;
-	font-size: 25%;
+	font-size: 70%;
+}
+.divTableCell:active {
+	filter: brightness( 125% );
 }
 .divTableBody {
 	display: table-row-group;
 }
-#product {
-	max-width: 50%;
-	text-align: center;
-	height: 20%;
-	color: #5BA4C4;
+#button1, #button4, #button7, #button-blank {
+	border-left: none;
+}
+#button3, #button6, #button9, #buttonC {
+	border-right: none;
+}
+@media ( max-width: 600px ) {
+	body {
+		font-size: 100%;
+	}
+	.problem-container {
+		height: 100%;
+	}
 }
